After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711615 - codecparsers: Condition mistake in h264parser
codecparsers: Condition mistake in h264parser
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other Linux
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-07 13:58 UTC by Aurélien Zanelli
Modified: 2013-11-07 18:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
codecparsers: Fix bad condition in h264 parser. (1.12 KB, patch)
2013-11-07 13:58 UTC, Aurélien Zanelli
committed Details | Review

Description Aurélien Zanelli 2013-11-07 13:58:45 UTC
Created attachment 259185 [details] [review]
codecparsers: Fix bad condition in h264 parser.

Hi,

I think i found a little mistake in gst_h264_parser_parse_pic_timing(). The same condition is used twice in an if-else if statement.

I attached a patch which fix it and set the 'else if' condition according to value used in that branch.

Best regards,
Comment 1 Sebastian Dröge (slomo) 2013-11-07 17:51:14 UTC
commit 660979bbf23809d66f2c91508df752ec370cd50f
Author: Aurélien Zanelli <aurelien.zanelli@parrot.com>
Date:   Thu Nov 7 14:39:26 2013 +0100

    codecparsers: Fix bad condition in h264 parser
    
    https://bugzilla.gnome.org/show_bug.cgi?id=711615