codecparsers: Fix bad condition in h264 parser

https://bugzilla.gnome.org/show_bug.cgi?id=711615